--- a/kakaotalk/css/components/nav-bar.css
+++ b/kakaotalk/css/components/nav-bar.css
@@ -29,10 +29,29 @@
 }
 
 .nav__notification {
+  background-color: tomato;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600;
   position: absolute;
   left: 15px;
   bottom: 15px;
   animation: notificationAnimation 2s ease-in-out infinite;
+}
+
+.ellipsis__nav__notification {
+  background-color: tomato;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  position: absolute;
+  left: 30px;
+  bottom: 27px;
 }
 
 @keyframes appearBtnAnimation {
