--- a/kakaotalk/css/screens/chat.css
+++ b/kakaotalk/css/screens/chat.css
@@ -90,3 +90,65 @@
 .message-row--own .message__info {
   flex-direction: row-reverse;
 }
+
+.reply {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 25px;
+  box-sizing: border-box;
+  align-items: center;
+}
+
+.reply .reply__column:first-child {
+  width: 10%;
+}
+
+.reply .reply__column:last-child {
+  width: 90%;
+  position: relative;
+}
+
+.reply i {
+  opacity: 0.5;
+}
+
+.reply input {
+  padding: 14px;
+  width: 100%;
+  border: 1px solid #fae100;
+  border-radius: 25px;
+  box-sizing: border-box;
+}
+
+.reply__column:last-child > i,
+.reply__column:last-child button {
+  position: absolute;
+  right: 5px;
+  top: 6px;
+}
+
+.reply__column:last-child > i {
+  right: 45px;
+  top: 14px;
+}
+
+.reply__column button {
+  background-color: #fae100;
+  border: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.reply__column button i {
+  opacity: 1;
+}
+
+.reply__column button:foucus,
+.reply__column button:active {
+  outline: none;
+}
