--- a/furniture/scss-masterclass-master/src/scss/styles.scss
+++ b/furniture/scss-masterclass-master/src/scss/styles.scss
@@ -1,59 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 @import "reset";
 @import "_variables";
+@import "_extend";
 
 * {
   box-sizing: border-box;
+  font-family: "Fira Sans", sans-serif;
 }
 
 body {
-  height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  height: 100%;
+  width: 100%;
+  background-color: royalblue;
 }
 
-header {
-  background-color: $white;
-  color: $red;
-  width: 33%;
-  height: 100%;
-  padding: 10vh 0 72px 72px;
+nav {
+  height: 8vh;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.01);
+  border-bottom: 1px solid white;
+  color: white;
+  display: grid;
+  grid-template-columns: 2fr repeat(2, 1fr);
+}
+
+ul {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  h1 {
-    font-size: 85px;
-    width: 50%;
-  }
+}
 
-  .bottom {
-    padding-right: 72px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    line-height: 1.4;
-  }
-
-  h3,
-  p {
-    width: 80%;
-    text-align: justfy;
-  }
-  h3 {
-    font-size: 25px;
-    font-weight: 300;
-    margin-bottom: 24px;
-  }
-  p {
-    font: 15px;
-  }
-  nav {
-    margin-top: 20px;
-    line-height: 1.7;
-    width: 70%;
-  }
-  a {
-    color: gray;
-    font-size: 15px;
-  }
+main {
+  height: 100%;
+  width: 100%;
+  background-color: royalblue;
 }
